# hobby

./: .gitignore  Pipfile  README.md  my_classifier_v2.py
aoj/: ITP1_10_A_Distance.ipynb  ITP1_10_B_Triangle.ipynb  ITP1_10_D_Distance_II.ipynb  ITP1_1_B_X_Cubic.ipynb  ITP1_2_A_Small_Large_or_Equal.ipynb  ITP1_2_D_Circle_in_a_Rectangle.ipynb  ITP1_3_A_Print_Many_Hello_World.ipynb  ITP1_3_B_Print_Test_Cases.ipynb  ITP1_3_C_Swapping_Two_Numbers.ipynb  ITP1_3_D_How_Many_Divisors.ipynb  ITP1_4_A_AB_Problem.ipynb  ITP1_4_B_Circle.ipynb  ITP1_5_D_Structured_Programming.ipynb  ITP1_6_A_Reversing_Numbers.ipynb  ITP1_6_D_Matrix_Vector_Multiplication.ipynb  ITP1_7_C_Spreadsheet.ipynb  ITP1_8_A_Toggling_Cases.ipynb  ITP1_9_B_Shuffle.ipynb  ITP1_9_C_Card_Game.ipynb  ITP1_9_D_Transformation.ipynb
atcoder/aoj/IntroductionToProgramming/: ITP1_1_C_Rectangle.ipynb  ITP1_1_D_Watch.ipynb  ITP1_2_B_Range.ipynb  ITP1_4_C_Simple_Calculator.ipynb  ITP1_4_D_Min_Max_and_Sum.ipynb  ITP1_5_B_Print_a_Frame.ipynb  ITP1_6_B_Finding_Missing_Cards.ipynb  ITP1_7_A_Grading.ipynb  ITP1_7_B_How_many_ways.ipynb  ITP1_8_C_Counting_Characters.ipynb  ITP1_9_A_Finding_a_Word.ipynb
atcoder/beginner/selection/: ABC086A_Product.ipynb
atcoder/educational_dp/: a_frog_1.py
atcoder/educational_dp/02/: c_vacation.py  d_knapsack_1_1.py  e_knapsack_2.py  f_lcs.py
atcoder/grand/043/: A_Range_Flip_Find_Route.ipynb
atcoder/grand/045/: A_Xor_Battle.ipynb
atcoder/panasonic/2020/: A_Kth_Term.ipynb  B_Bishop.ipynb
atcoder/python/: Pipfile  README.md
atcoder/python/aoj/: ITP1_10_C_Standard_Deviation.ipynb  ITP1_2_C_Sorting_Three_Numbers.ipynb  ITP1_5_A_Print_a_Rectangle.ipynb  ITP1_5_C_Print_a_Chessboard.ipynb  ITP1_6_C_Official_House.ipynb  ITP1_7_D_Matrix_Multiplication.ipynb  ITP1_8_B_Sum_of_Numbers.ipynb  (+1 more)
atcoder/rust/: README.md  template.rs
atcoder/rust/beginner/contest/abc234/: Cargo.toml
atcoder/rust/beginner/contest/abc235/: Cargo.toml
atcoder/rust/beginner/contest/abc250/: Cargo.toml
bayesian_statistics/: bayes_update.ipynb
bq/: bq_rm_dataset_tables.sh
docker/docker_example/: command_reference.txt  main.go
docker/kubernetes_example/: command_reference.txt
docker_and_k8s/docker_example/: command_reference.txt
docker_and_k8s/docker_logging_example/: jvm.options
docker_and_k8s/kubernetes_example/: command_reference.txt  simple-replicaset-with-label.yaml
docker_and_k8s/kubernetes_logging_example/: elasticsearch.yaml  fluentd-daemonset.yaml  kibana.yaml
docker_and_k8s/logging_example/: docker-compose.yml
flask/: main.py  style.css  test.py
flask/templates/: 404.html  base_bak.html  base_bak2.html  basic_bak2.html  basic_bak3.html  home.html  puppy.html  signup.html
grtr/src/: grtr_anime.html  grtr_calc.html  grtr_simu.html
machine_learning/exercise/: sin.py
machine_learning/my_classifier/: my_utils.py  param_clf.yml
my_classifier/: .gitignore  my_classifier.py  my_utils.py
my_classifier/data/: score_pred_by_R-forest.csv
my_classifier/model/: R-forest.pkl  imputer.pkl
opencv/: img_movie_test.ipynb
practice/: test.json
practice/airbyte/: README.md
practice/algorithm/: README.md  bit_full_search.py
practice/c++/: cpp.sh  test
practice/dash/: Pipfile  scatter.py
practice/design_pattern/: 01_builder.py  02_factory_method.py  04_singleton.py  05_prototype.py  06_adapter.py  07_bridge.py  08_composite.py  09_decorator.py  10_facade.py  11_flyweight_01.py  11_flyweight_02.py  12_proxy.py  13_chain_of_responsibility.py  14_command.py  15_interpreter.py  16_iterator_01.py  16_iterator_02.py  17_mediator.py  18_memento.py  19_observer.py  20_state.py  21_strategy.py  22_template_method.py  23_visitor.py  README.md
practice/django/: Pipfile  README.md  requirements.txt
practice/docker/: README.md
practice/flask/: index.html
practice/game/: hangman.ipynb
practice/go/: 009_arithmetic.go
practice/golang/: README.md
practice/grpc/: README.md
practice/object/: Human.ipynb
practice/python/datacontractcli/: README.md  pyproject.toml
practice/reactjs/: README.md
practice/rust/: .gitignore  README.md
practice/rust/test-async-trait/: Cargo.toml
practice/rust/test-async-trait/src/: main.rs
practice/rust/todo/: .gitignore  Cargo.toml  Dockerfile  README.md  todo.db
practice/rust/todo/src/: main.rs
practice/rust/todo/templates/: index.html
practice/sample/: 011_image_show_info.py  012_image_resize.py  013_image_crop.py  014_image_rotate.py  016_image_resize_fixed_size.py  018_image_resize_within_box.py  019_exif_show_info.py  020_exif_remove_info.py  023_read_json_and_write_csv.py  025_regexp_postcode.py  026_regexp_sub.py  05_pathlib_match.py  06_zipfile_create.py  07_zipfile_append.py  08_zipfile_read.py
practice/sample_python/: 034_worksheet_create.py  039_cell_read_single.py  043_webdriver.py  044_rss.py
practice/solid/: 01_single_responsibility.py  02_open_closed.py  03_liskov_substitution.py  04_interface_segregation.py  05_dependency_inversion.py  README.md  single_responsibility_principle.py
practice/terraform/: command.md  s3-unique-name.sh
practice/typescript/: README.md  tsconfig.json
practice/vuejs/: .gitignore  README.md  hello.html  hello.vue  sample_app.html
twitter/: search_tweet_and_write_file.py
(+1380 files in other folders)
