[package]
name = "test-async-trait"
version = "0.1.0"
authors = ["mida-hub <rusuden0106@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
async-std = { version = "1.6.1", features = ["attributes"] }
