[package]
name = "todo"
version = "0.1.0"
authors = ["mida-hub <rusuden0106@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.11.0-beta.2"
actix-web = "4.0.0-beta.3"
actix-rt = "2.0.2"
thiserror = "1.0.30"
askama = "0.11.0"
rusqlite = { version = "0.26.2", features=["bundled"] }
r2d2 = "0.8.9"
r2d2_sqlite = "0.19.0"
