[package]
name = "abc235"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc235-a = { alias = "a", problem = "https://atcoder.jp/contests/abc235/tasks/abc235_a" }
abc235-b = { alias = "b", problem = "https://atcoder.jp/contests/abc235/tasks/abc235_b" }
abc235-c = { alias = "c", problem = "https://atcoder.jp/contests/abc235/tasks/abc235_c" }
abc235-d = { alias = "d", problem = "https://atcoder.jp/contests/abc235/tasks/abc235_d" }
abc235-e = { alias = "e", problem = "https://atcoder.jp/contests/abc235/tasks/abc235_e" }
abc235-f = { alias = "f", problem = "https://atcoder.jp/contests/abc235/tasks/abc235_f" }
abc235-g = { alias = "g", problem = "https://atcoder.jp/contests/abc235/tasks/abc235_g" }

[[bin]]
name = "abc235-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc235-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc235-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc235-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc235-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc235-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc235-g"
path = "src/bin/g.rs"

[dependencies]
proconio = "0.4.3"

[dev-dependencies]
